--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
-    "express": "~4.15.5",
+    "express": "^4.17.1",
     "mongodb": "^3.1.13",
     "mongoose": "^5.4.7",
     "morgan": "~1.9.0",
-    "node-sass-middleware": "0.9.8",
+    "node-sass-middleware": "^0.11.0",
     "nodemon": "^1.18.9",
     "serve-favicon": "~2.4.5"
   }
